# hf-plugin-image-studio

./: .gitignore  LICENSE  README.md  index.html  manifest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: plugin-release.yml
backend/: Cargo.toml
backend/src/: commands.rs  lib.rs
src/: download.ts  hostBridge.ts  i18n.ts  index.tsx  modelOptions.ts  storage.ts  styles.css  types.ts
src/panel/: ClosingAppSelect.tsx  ImageStudioPanel.tsx  Lightbox.tsx  MaskEditorModal.tsx  NumberStepper.tsx  SearchBar.tsx  SettingsModal.tsx  StudioComposer.tsx  StudioHeader.tsx  StudioHero.tsx  StudioSidebar.tsx  TaskDetailModal.tsx  TaskGrid.tsx
