[package]
name = "hf-plugin-image-studio"
version = "0.1.5"
edition = "2021"
description = "HaloForge Image Studio plugin backend"
license = "MIT"

[lib]
name = "hf_plugin_image_studio"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
hf-plugin-api = { package = "haloforge-plugin-api", version = "0.2.5" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
